# MajorProj

./: .gitignore  PROJECT_OVERVIEW.md  README.md  altScrapper.py  amazon_reviews_page.txt  bhai.py  chatbot.py  ninja.py  requirements.txt  reviews_cleaned.csv  scraped_reviews.csv  scrapper.py  sidScraper.py
examples/: scraper1.py
revify-frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  setup.bat  setup.sh  tailwind.config.js
revify_flow/: .gitignore  README.md  pyproject.toml
revify_flow/output/: extracted_features.json  extracted_features_raw.txt
revify_flow/src/revify_flow/: api.py  benchmark_results.csv  benchmarking.py  main.py  product_summaries.json  reviews_cleaned.csv  scraped_reviews.csv  script.py
revify_flow/src/revify_flow/crews/team_revify/: team_revify.py
revify_flow/src/revify_flow/crews/team_revify/config/: agents.yaml  tasks.yaml
revify_flow/src/revify_flow/output/: extracted_features.json  extracted_features_raw.txt  feature_analysis.json  feature_analysis_1.json  feature_analysis_10.json  feature_analysis_11.json  feature_analysis_12.json  feature_analysis_13.json  feature_analysis_14.json  feature_analysis_15.json  feature_analysis_16.json  feature_analysis_17.json  feature_analysis_2.json  feature_analysis_20250921_200034.json  feature_analysis_20250925_151159.json  feature_analysis_3.json  feature_analysis_4.json  feature_analysis_5.json  feature_analysis_6.json  feature_analysis_7.json  feature_analysis_8.json  feature_analysis_9.json
revify_flow/src/revify_flow/tools/: amazon_scraper_tool.py
(+16 files in other folders)
