[project]
name = "revify_flow"
version = "0.1.0"
description = "revify_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
kickoff = "revify_flow.main:kickoff"
plot = "revify_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
